== 0.22.6

* Enhancements
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults

* Refactoring
  * Comments no longer use class_name or class_id and now require to be part of a sticky_id
  * Removed unused project position

== 0.22.5

* Enhancements
  * Creating a sticky from the project page will
    * default the new sticky to the currently selected frame
    * refresh the list of stickies when the sticky is created
  * Switching frames in the sticky popup will now reflect on the underlying project page
  * Update to Rails 3.2.6 and Contour 1.0.2
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0
  * Frames are now ordered by end date descending by default on frames index

* Bug Fix
  * Links from email to stickies past due, due today, or upcoming now properly reset other filters

== 0.22.4

* Enhancements
  * Update to Rails 3.2.5 and Contour 1.0.1
  * Updated Devise configuration files for devise 2.1.0

* Bug Fix
  * Timeouts no longer cause an error when trying to login again
  * Creating a group without specifying a template now correctly highlights an error on the required template name field

== 0.22.3

* Enhancements
  * Fixed the way popups appear on smaller devices

== 0.22.2

* Enhancements
  * Use Contour for User account Confirmations and Unlocks

== 0.22.1

* Enhancements
  * Editing stickies from the sticky list or project page now redirects back to the sticky list or project page, respectively, after the sticky is updated
  * Template creation page cleaned up
  * Table Headers now use the same styling
  * Tags updated so the bottom is not cut off
  * Tags in emails now have the text displayed in white to match the way they are displayed in the web application

* Bug Fix
  * Fix Registration page to use new Contour login attributes

== 0.22.0

* Enhancements
  * Using Contour 1.0.0.beta with Twitter-Bootstrap CSS and JS